Update Phaser & New Phaser Inspector Plugin

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script type="text/javascript" src="js/stateManager.js"></script>
 
         <script type="text/javascript" src="plugins/phaser-debug.js"></script>
+        <script type="text/javascript" src="plugins/phaser-inspector.min.js"></script>
 
         <link rel="stylesheet" href="css/style.css">
 
