Added Phaser input plugin

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
         <script type="text/javascript" src="plugins/phaser-debug.js"></script>
         <script type="text/javascript" src="plugins/phaser-inspector.min.js"></script>
+        <script type="text/javascript" src="plugins/phaser-super-storage.min.js"></script>
+        <script type="text/javascript" src="plugins/phaser-input.min.js"></script>
 
         <link rel="stylesheet" href="css/style.css">
 
