--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="DallOner" />
-        <meta name="description" content="My personal Phaser-Boilerplate" />
+        <meta name="description" content="Game Development Tool to create awesome Html5 games" />
 
         <script type="text/javascript" src="lib/phaser.min.js"></script>
         <script type="text/javascript" src="js/boot.js"></script>
