Updated Phaser CE Logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Phaser-Boilerplate</title>
+        <title>Phaser-CE-Boilerplate</title>
 
     </head>
 
