Updated Readme with new notes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="author" content="DallOner" />
         <meta name="description" content="Game Development Tool to create awesome Html5 games" />
 
+        <!-- <script type="text/javascript" src="lib/phaser.js"></script> -->
         <script type="text/javascript" src="lib/phaser.min.js"></script>
         <script type="text/javascript" src="js/boot.js"></script>
         <script type="text/javascript" src="js/load.js"></script>
