Added Phaser UI Tools
Added Phaser UI Tools and Update Phaser lib

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="plugins/phaser-inspector.min.js"></script>
         <script type="text/javascript" src="plugins/phaser-super-storage.min.js"></script>
         <script type="text/javascript" src="plugins/phaser-input.min.js"></script>
+        <script type="text/javascript" src="plugins/phaser-ui-tools.js"></script>
 
         <link rel="stylesheet" href="css/style.css">
 
